[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[metadata]
name = pygen
version = 0.1.0
description = "Modular framework for data and machine learning pipelines with focus on quality, governance, and low operational cost for SMEs"
author = Alexandre Mendes Bastos
license = GPL-3.0-only
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/alexandremendesb12/pygen
classifiers =
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Operating System :: OS Independent

[options]
include_package_data = True
package_dir =
    = pygen
packages = find:
install_requires =
    pyspark>=3.1.1
    mlflow>=2.0
    mkdocs
    mkdocs-material
    python-dotenv
    pyyaml
    pandas
    numpy

[options.packages.find]
where = src
